--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!---->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online-Store</title>
@@ -14,7 +15,7 @@
       .header {
         display: flex;
         justify-content: space-between;
-        background-color: orange;
+        background-color: blue;
       }
       .footer {
         display: flex;
