--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="row">
         <div class="box">
-          <img src="/assets/images/1.png" />
+          <img src="assets/images/1.png" />
           <h2>Product 1</h2>
           <p>This is the description of the product.</p>
           <h3>Rs 230</h3>
