--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
           <button>Add to Cart</button>
         </div>
         <div class="box">
-          <img src="/assets/images/2.png" />
+          <img src="assets/images/2.png" />
           <h2>Product 2</h2>
           <p>This is the description of the product.</p>
           <h3>Rs 200</h3>
           <button>Add to Cart</button>
         </div>
         <div class="box">
-          <img src="/assets/images/3.png" />
+          <img src="assets/images/3.png" />
           <h2>Product 3</h2>
           <p>This is the description of the product.</p>
           <h3>Rs 375</h3>
@@ -96,7 +96,7 @@
       </div>
       <div class="row1">
         <div class="box">
-          <img src="/assets/images/4.png" />
+          <img src="assets/images/4.png" />
           
         </div>
         <div class="box">
@@ -114,7 +114,7 @@
               <p>This is the description of the product. can be changed </p>
             </div>
             <div class="box">
-                <img src="/assets/images/5.png" />    
+                <img src="assets/images/5.png" />    
               </div>
             </div>
             <div class="footer">
